Fixed backend and integrated frontend using thymeleaf templates