@@ -7,7 +7,6 @@ import com.wip.repository.CustomerRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CustomerServiceImpl implements CustomerService {
@@ -20,7 +19,12 @@ public class CustomerServiceImpl implements CustomerService {
 
     @Override
     public CustomerDto addCustomer(CustomerDto customerDto) {
-        Customer customer = toEntity(customerDto);
+        Customer customer = new Customer();
+        customer.setCustomerName(customerDto.getCustomerName());
+        customer.setEmail(customerDto.getEmail());
+        customer.setPhone(customerDto.getPhone());
+        customer.setAddress(customerDto.getAddress());
+
         return toDto(customerRepository.save(customer));
     }
 
@@ -29,34 +33,39 @@ public class CustomerServiceImpl implements CustomerService {
         return customerRepository.findAll()
                 .stream()
                 .map(this::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public CustomerDto getCustomerById(Long id) {
         Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found"));
         return toDto(customer);
     }
 
     @Override
     public CustomerDto updateCustomer(Long id, CustomerDto customerDto) {
-        Customer existing = customerRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
+        Customer customer = customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found"));
 
-        existing.setCustomerName(customerDto.getCustomerName());
-        existing.setEmail(customerDto.getEmail());
-        existing.setPhone(customerDto.getPhone());
-        existing.setAddress(customerDto.getAddress());
+        customer.setCustomerName(customerDto.getCustomerName());
+        customer.setEmail(customerDto.getEmail());
+        customer.setPhone(customerDto.getPhone());
+        customer.setAddress(customerDto.getAddress());
 
-        return toDto(customerRepository.save(existing));
+        return toDto(customerRepository.save(customer));
     }
 
     @Override
     public void deleteCustomer(Long id) {
-        Customer existing = customerRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Customer not found with id: " + id));
-        customerRepository.delete(existing);
+        Customer customer = customerRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Customer not found"));
+
+        if (customerRepository.existsParcelsByCustomerId(id)) {
+            throw new IllegalStateException("Cannot delete customer because parcels exist for this customer");
+        }
+
+        customerRepository.delete(customer);
     }
 
     private CustomerDto toDto(Customer customer) {
@@ -67,15 +76,5 @@ public class CustomerServiceImpl implements CustomerService {
         dto.setPhone(customer.getPhone());
         dto.setAddress(customer.getAddress());
         return dto;
-    }
-
-    private Customer toEntity(CustomerDto dto) {
-        Customer customer = new Customer();
-        customer.setCustomerId(dto.getCustomerId());
-        customer.setCustomerName(dto.getCustomerName());
-        customer.setEmail(dto.getEmail());
-        customer.setPhone(dto.getPhone());
-        customer.setAddress(dto.getAddress());
-        return customer;
     }
 }
