@@ -6,60 +6,70 @@ import com.wip.entity.Shipment;
 import com.wip.exception.ResourceNotFoundException;
 import com.wip.repository.ParcelRepository;
 import com.wip.repository.ShipmentRepository;
-import com.wip.util.TrackingNumberGenerator;
+import com.wip.repository.TrackingUpdateRepository;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Service
 public class ShipmentServiceImpl implements ShipmentService {
 
     private final ShipmentRepository shipmentRepository;
     private final ParcelRepository parcelRepository;
+    private final TrackingUpdateRepository trackingUpdateRepository;
 
-    public ShipmentServiceImpl(ShipmentRepository shipmentRepository, ParcelRepository parcelRepository) {
+    public ShipmentServiceImpl(ShipmentRepository shipmentRepository,
+                               ParcelRepository parcelRepository,
+                               TrackingUpdateRepository trackingUpdateRepository) {
         this.shipmentRepository = shipmentRepository;
         this.parcelRepository = parcelRepository;
+        this.trackingUpdateRepository = trackingUpdateRepository;
     }
 
     @Override
     public ShipmentDto addShipment(Long parcelId) {
         Parcel parcel = parcelRepository.findById(parcelId)
-                .orElseThrow(() -> new ResourceNotFoundException("Parcel not found with id: " + parcelId));
+                .orElseThrow(() -> new ResourceNotFoundException("Parcel not found"));
 
         Shipment shipment = new Shipment();
-        shipment.setTrackingNumber(TrackingNumberGenerator.generateTrackingNumber());
+        shipment.setParcel(parcel);
+        shipment.setTrackingNumber("TRK-" + UUID.randomUUID().toString().substring(0, 8).toUpperCase());
         shipment.setShipmentDate(LocalDate.now());
         shipment.setCurrentLocation(parcel.getSourceAddress());
         shipment.setEstimatedDeliveryDate(LocalDate.now().plusDays(3));
-        shipment.setParcel(parcel);
 
         return toDto(shipmentRepository.save(shipment));
     }
 
     @Override
     public List<ShipmentDto> getAllShipments() {
-        return shipmentRepository.findAll().stream().map(this::toDto).collect(Collectors.toList());
+        return shipmentRepository.findAll()
+                .stream()
+                .map(this::toDto)
+                .toList();
     }
 
     @Override
     public ShipmentDto getShipmentById(Long id) {
-        return toDto(shipmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found with id: " + id)));
+        Shipment shipment = shipmentRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found"));
+        return toDto(shipment);
     }
 
     @Override
     public ShipmentDto getShipmentByTrackingNumber(String trackingNumber) {
-        return toDto(shipmentRepository.findByTrackingNumber(trackingNumber)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found with tracking number: " + trackingNumber)));
+        Shipment shipment = shipmentRepository.findByTrackingNumber(trackingNumber)
+                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found"));
+        return toDto(shipment);
     }
 
     @Override
     public ShipmentDto updateShipmentLocation(Long id, String currentLocation) {
         Shipment shipment = shipmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found"));
         shipment.setCurrentLocation(currentLocation);
         return toDto(shipmentRepository.save(shipment));
     }
@@ -67,33 +77,42 @@ public class ShipmentServiceImpl implements ShipmentService {
     @Override
     public ShipmentDto updateShipment(Long id, ShipmentDto shipmentDto) {
         Shipment shipment = shipmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found"));
 
-        shipment.setTrackingNumber(shipmentDto.getTrackingNumber());
-        shipment.setShipmentDate(shipmentDto.getShipmentDate());
         shipment.setCurrentLocation(shipmentDto.getCurrentLocation());
         shipment.setEstimatedDeliveryDate(shipmentDto.getEstimatedDeliveryDate());
+
+        if (shipmentDto.getShipmentDate() != null) {
+            shipment.setShipmentDate(shipmentDto.getShipmentDate());
+        }
 
         return toDto(shipmentRepository.save(shipment));
     }
 
+    @Transactional
     @Override
     public void deleteShipment(Long id) {
         Shipment shipment = shipmentRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found with id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Shipment not found"));
+
+        trackingUpdateRepository.deleteByShipment_ShipmentId(id);
         shipmentRepository.delete(shipment);
     }
 
     private ShipmentDto toDto(Shipment shipment) {
         ShipmentDto dto = new ShipmentDto();
         dto.setShipmentId(shipment.getShipmentId());
+        dto.setParcelId(shipment.getParcel() != null ? shipment.getParcel().getParcelId() : null);
         dto.setTrackingNumber(shipment.getTrackingNumber());
         dto.setShipmentDate(shipment.getShipmentDate());
         dto.setCurrentLocation(shipment.getCurrentLocation());
         dto.setEstimatedDeliveryDate(shipment.getEstimatedDeliveryDate());
-        if (shipment.getParcel() != null) {
-            dto.setParcelId(shipment.getParcel().getParcelId());
-        }
+        dto.setCustomerName(
+                shipment.getParcel() != null && shipment.getParcel().getCustomer() != null
+                        ? shipment.getParcel().getCustomer().getCustomerName()
+                        : null
+        );
+        dto.setReceiverPhone(shipment.getParcel() != null ? shipment.getParcel().getReceiverPhone() : null);
         return dto;
     }
 }
